exports[`test render with enabled button if newP and newPDup 1`] = `
<div
  className="background--light-primary one-whole text-center push-double-top@lap-and-up push-double-bottom"
  style={
    Object {
      "overflow": "visible",
    }
  }>
  <form
    action={undefined}
    className="hard-ends soft one-whole two-thirds@portable one-half@anchored display-inline-block"
    id="reset-password"
    method={undefined}
    onSubmit={[Function]}
    style={undefined}>
    <fieldset
      className="flush-bottom">
      <div
        className="push-double">
        <h4
          className="text-center">
          Change Password
        </h4>
      </div>
      <div
        className="input"
        data-spec="input-wrapper"
        style={Object {}}>
        <label
          htmlFor="newP"
          style={Object {}}>
          New Password
        </label>
        <input
          className={undefined}
          data-lpignore={undefined}
          data-spec="input"
          defaultValue={undefined}
          disabled={undefined}
          id="newP"
          maxLength=""
          name="newP"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="New Password"
          readOnly={undefined}
          style={Object {}}
          type="password" />
      </div>
      <div
        className="input"
        data-spec="input-wrapper"
        style={Object {}}>
        <label
          htmlFor="newPDup"
          style={Object {}}>
          Repeat New Password
        </label>
        <input
          className={undefined}
          data-lpignore={undefined}
          data-spec="input"
          defaultValue={undefined}
          disabled={undefined}
          id="newPDup"
          maxLength=""
          name="newPDup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Repeat New Password"
          readOnly={undefined}
          style={Object {}}
          type="password" />
      </div>
      <a
        className="btn--small btn--dark-tertiary display-inline-block"
        onClick={[Function]}
        style={Object {}}
        tabIndex={-1}>
        Back
      </a>
      <button
        className="push-left btn">
        Enter
      </button>
    </fieldset>
  </form>
</div>
`;

exports[`test renders with disabled button without newP 1`] = `
<div
  className="background--light-primary one-whole text-center push-double-top@lap-and-up push-double-bottom"
  style={
    Object {
      "overflow": "visible",
    }
  }>
  <form
    action={undefined}
    className="hard-ends soft one-whole two-thirds@portable one-half@anchored display-inline-block"
    id="reset-password"
    method={undefined}
    onSubmit={[Function]}
    style={undefined}>
    <fieldset
      className="flush-bottom">
      <div
        className="push-double">
        <h4
          className="text-center">
          Change Password
        </h4>
      </div>
      <div
        className="input"
        data-spec="input-wrapper"
        style={Object {}}>
        <label
          htmlFor="newP"
          style={Object {}}>
          New Password
        </label>
        <input
          className={undefined}
          data-lpignore={undefined}
          data-spec="input"
          defaultValue={undefined}
          disabled={undefined}
          id="newP"
          maxLength=""
          name="newP"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="New Password"
          readOnly={undefined}
          style={Object {}}
          type="password" />
      </div>
      <div
        className="input"
        data-spec="input-wrapper"
        style={Object {}}>
        <label
          htmlFor="newPDup"
          style={Object {}}>
          Repeat New Password
        </label>
        <input
          className={undefined}
          data-lpignore={undefined}
          data-spec="input"
          defaultValue={undefined}
          disabled={undefined}
          id="newPDup"
          maxLength=""
          name="newPDup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Repeat New Password"
          readOnly={undefined}
          style={Object {}}
          type="password" />
      </div>
      <a
        className="btn--small btn--dark-tertiary display-inline-block"
        onClick={[Function]}
        style={Object {}}
        tabIndex={-1}>
        Back
      </a>
      <button
        className="push-left btn--disabled">
        Enter
      </button>
    </fieldset>
  </form>
</div>
`;

exports[`test renders with disabled button without newPDup 1`] = `
<div
  className="background--light-primary one-whole text-center push-double-top@lap-and-up push-double-bottom"
  style={
    Object {
      "overflow": "visible",
    }
  }>
  <form
    action={undefined}
    className="hard-ends soft one-whole two-thirds@portable one-half@anchored display-inline-block"
    id="reset-password"
    method={undefined}
    onSubmit={[Function]}
    style={undefined}>
    <fieldset
      className="flush-bottom">
      <div
        className="push-double">
        <h4
          className="text-center">
          Change Password
        </h4>
      </div>
      <div
        className="input"
        data-spec="input-wrapper"
        style={Object {}}>
        <label
          htmlFor="newP"
          style={Object {}}>
          New Password
        </label>
        <input
          className={undefined}
          data-lpignore={undefined}
          data-spec="input"
          defaultValue={undefined}
          disabled={undefined}
          id="newP"
          maxLength=""
          name="newP"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="New Password"
          readOnly={undefined}
          style={Object {}}
          type="password" />
      </div>
      <div
        className="input"
        data-spec="input-wrapper"
        style={Object {}}>
        <label
          htmlFor="newPDup"
          style={Object {}}>
          Repeat New Password
        </label>
        <input
          className={undefined}
          data-lpignore={undefined}
          data-spec="input"
          defaultValue={undefined}
          disabled={undefined}
          id="newPDup"
          maxLength=""
          name="newPDup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Repeat New Password"
          readOnly={undefined}
          style={Object {}}
          type="password" />
      </div>
      <a
        className="btn--small btn--dark-tertiary display-inline-block"
        onClick={[Function]}
        style={Object {}}
        tabIndex={-1}>
        Back
      </a>
      <button
        className="push-left btn--disabled">
        Enter
      </button>
    </fieldset>
  </form>
</div>
`;
